# XpuMusic

./: .agent_memory.json  .gitignore  BUILD_STATUS.md  BUILD_SUCCESS_REPORT.md  BUILD_USAGE.md  CLEANUP.md  CMAKE_GENERATION_FIX.md  CMakeLists.txt  CMakeLists_Audio.cmake  CMakeLists_CLEAN.txt  CMakeLists_FAILED.txt  CMakeLists_WORKING.txt  CMakeLists_new.txt  CMakeLists_original.txt  CMakeLists_test.txt  CMakeLists_test_audio.txt  CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPILATION_ERROR_FIX_STRATEGY.md  CROSSPLATFORM_CHANGES.md  DEPENDENCIES.md  ENGINEERING_SUMMARY.md  FOOBAR2000_COMPATIBILITY_ANALYSIS.md  FORCE_BUILD_SOLUTION.md  INSTALL_DEMO.sh  MUSIC_PLAYER_SUCCESS.md  MUSIC_PLAYER_USAGE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  RENAME_SUMMARY.md  WARNING_FIXES_SUMMARY.md  build.bat  build.sh  build_all.bat  build_cmake.bat  build_fixed_player.sh  build_macos.sh  build_music_player_fixed.bat  build_simple.bat  build_unix.sh  (+92 more)
build_audio_test/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MusicPlayer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  core_engine.vcxproj  core_engine.vcxproj.filters  final_wav_player.vcxproj  final_wav_player.vcxproj.filters  music-player.vcxproj  sdk_impl.vcxproj  (+14 more)
compat/: CMakeLists.txt  adapter_base.h  data_migration_manager.cpp  data_migration_manager.h  interface_bridge.h  interface_evolution.h  logging.h  xpumusic_compat_manager.cpp  xpumusic_compat_manager.h
compat/adapters/: adapter_base.h
compat/migration/: data_migration_manager.cpp  data_migration_manager.h
compat/plugin_loader/: plugin_loader.cpp  plugin_loader.h  service_registry_bridge.h  service_registry_bridge_new.h  test_plugin_loader.cpp
compat/sdk_implementations/: CMakeLists.test.txt  CMakeLists.txt  abort_callback.cpp.backup  abort_callback.h.backup  abort_callback.impl.cpp  abort_callback.implified.h  audio_chunk_impl.cpp  audio_chunk_impl.h  audio_chunk_impl_fixed.cpp  audio_chunk_interface.h  audio_sample.h  common_includes.h  file_info_impl.cpp  file_info_impl.h  file_info_interface.h  file_info_types.h  foobar_sdk_wrapper.cpp  foobar_sdk_wrapper.h  input_decoder_impl.cpp  input_decoder_impl.h  metadb_handle_impl.cpp  metadb_handle_impl.h  metadb_handle_impl_new.h  metadb_handle_impl_simple.h  metadb_handle_interface.h  metadb_handle_types.h  playable_location_impl.cpp  playable_location_impl.h  sdk_impl_simple.cpp  service_base.cpp  service_base.h  service_base_impl.cpp  service_base_impl.h  test_audio_chunk.cpp  test_sdk_impl.cpp
compat/tests/: CMakeLists.txt  adapter_test.cpp  data_migration_test.cpp  foobar_sdk_test.cpp  test_framework.h  test_main.cpp
compat/xpumusic/: foobar_adapter.h
compat/xpumusic_sdk/: foobar2000.cpp  foobar2000.h  foobar2000_sdk.h  foobar2000_sdk_complete.h  input_decoder.h
core/: CMakeLists.txt  audio_decoder_manager.cpp  audio_decoder_manager.h  audio_decoder_registry.cpp  audio_decoder_registry.h  audio_format_detector.cpp  audio_format_detector.h  config_manager.cpp  config_manager.h  core_engine.cpp  core_engine.h  dependency_detector.h  event_bus.cpp  event_bus.h  platform_utils.h  playback_engine.cpp  playback_engine.h  playlist_manager.cpp  playlist_manager.h  plugin_host.cpp  plugin_host.h  plugin_manager.cpp  plugin_manager.h  plugin_manager_enhanced.cpp  plugin_manager_enhanced.h  plugin_manager_v2.cpp  plugin_registry.cpp  plugin_registry.h  service_registry.cpp  service_registry.h  visualization_engine.cpp  visualization_engine.h
demos/: CMakeLists.txt  multi_value_metadata_demo.cpp
fb2k_compat/: CMakeLists.txt  README.md  STAGE1_REPORT.md  build_and_test.bat  build_simple.bat  framework_demo.py  minihost.cpp  minihost.h  quick_start.md  simple_build.cpp  test_minihost.cpp
fb2k_compat/stage1_1/: CMakeLists.txt  FINAL_STAGE1_1_REPORT.md  STAGE1_1_REPORT.md  component_analysis_report.json  quick_start_real.md  real_component_analyzer.py  real_component_bridge.h  real_minihost.cpp  real_minihost.h  simple_validate.py  test_framework.cpp  test_real_component.cpp  validate_framework.py
fb2k_compat/stage1_2/: CMakeLists.txt  ROADMAP.md  audio_chunk.cpp  audio_chunk.h  dsp_chain_impl.cpp  dsp_interfaces.h  dsp_preset_impl.cpp  dsp_preset_simple.cpp  integration_test.cpp  output_interfaces.h  output_wasapi.h  simulate_integration_test.py
fb2k_compat/stage1_3/: ROADMAP.md  STAGE1_3_COMPLETION.md  VERIFICATION_REPORT.md  audio_processor_impl.cpp  build_stage1_3.bat  build_stage1_3.sh  dsp_equalizer.cpp  dsp_equalizer.h  dsp_manager.h  dsp_manager_impl.cpp  dsp_reverb.cpp  dsp_reverb.h  output_wasapi_impl.cpp  test_simple_stage1_3.cpp  test_stage1_3.cpp
fb2k_compat/stage1_4/: STAGE1_4_COMPLETION.md  audio_analyzer.h  fb2k_com_base.cpp  fb2k_com_base.h  fb2k_component_system.cpp  fb2k_component_system.h  output_asio.h  output_asio_impl.cpp  spectrum_analyzer.cpp  test_stage1_4.cpp  vst_bridge.cpp  vst_bridge.h
fb2k_compat/stage1_5/: PROJECT_COMPLETION.md  ai_audio_enhancement.h  cloud_sync_service.h  mobile_adaptation.h  output_cross_platform.h
platform/: CMakeLists.txt  audio_output_factory.cpp  audio_output_factory.h
platform/linux/: audio_output_alsa.cpp  audio_output_stub.cpp
platform/windows/: audio_output_wasapi.cpp
plugins/decoders/: CMakeLists.txt  flac_decoder.cpp  flac_decoder.h  flac_decoder_minimal.cpp  flac_decoder_new.cpp  flac_decoder_stub.cpp  mp3_decoder.cpp  mp3_decoder_basic.cpp  mp3_decoder_fixed.cpp  mp3_decoder_impl.cpp  mp3_decoder_impl.h  mp3_decoder_simple.cpp  ogg_vorbis_decoder.cpp  ogg_vorbis_decoder.h  wav_decoder.cpp
plugins/dsp/: CMakeLists.txt  equalizer_dsp.cpp  volume_control_dsp.cpp
plugins/dsp_resampler/: CMakeLists.txt  dsp_resampler.cpp
plugins/example_volume/: CMakeLists.txt  README.md  volume_plugin.cpp  volume_plugin.h
plugins/wav_decoder/: CMakeLists.txt  wav_decoder.cpp
test_audio_backend/: CMakeLists.txt
test_audio_stub/: CMakeLists.txt
tests/: CMakeLists.txt  test_config_manager.cpp  test_event_bus.cpp
(+301 files in other folders)
